syntax = "proto3";
///创建场景
message CreateNewSceneReq{
	int32	CopyID		= 1;
	int32	CopyType	= 2;
	int32	PlayerNum	= 3;
	uint64	CreateParam	= 4;
}

///创建场景
message CreateNewSceneAck{
	uint32	RetCode		= 1;
	int32	CopyID		= 2;
	int32	CopyGuid	= 3;
	uint64	CreateParam	= 4;
	int32	ServerID	= 5;
	int32	CopyType	= 6;
	int32	PlayerNum	= 7;
}

////
message EnterSceneReq {
	uint64	RoleID		= 1;
	int32	ServerID	= 2; //场景服ID
	int32	CopyGuid	= 3;  //副本实例ID
	int32	CopyID		= 4;  //副本类型ID
}

message EnterSceneAck {
	uint32	RetCode		= 1;
	int32	CopyID		= 2;
	int32	CopyGuid	= 3;
	//以下是主角创建需要信息
	uint64	RoleID		= 4;
	int32	Carrer		= 5;
	int32	ActorID		= 6;
	string	RoleName	= 7;
	int32	Camp		= 8;
	float	X		= 9;
	float	Y		= 10;
	float	Z		= 11;
	float	Ft		= 12;
	int32	Hp		= 13;
	int32	Mp		= 14;
	int32	HpMax		= 15;
	int32	MpMax		= 16;
	repeated int32	Equips		= 17; //武器
}

message LeaveSceneReq {
	uint64	RoleID = 1;
	int32	Reason = 2;
}

message LeaveSceneAck {
	uint32	RetCode = 1;
}